# Project2

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  file_worker.py  job.py  job_manager.py  saver.py  utils.py  vacancy.py
tests/: test_job.py  test_job_manager.py  test_saver.py  test_vacancies.json  test_vacancy.py
